# bibliotheca

./: README.md
2019-advent-of-code/: Cargo.toml  commit.zsh
2020-advent-of-code/1/: 1.go  1.rs  2.go
2020-advent-of-code/10/: 1.exs  2.exs
2020-advent-of-code/11/: 1.exs  1.go  main.go
2020-advent-of-code/12/: 1.exs  2.exs
2020-advent-of-code/13/: 1.exs
2020-advent-of-code/15/: main.go
2020-advent-of-code/17/: main.go
2020-advent-of-code/18/: 1.exs  2.exs  example.txt
2020-advent-of-code/19/: 1.exs
2020-advent-of-code/2/: 1.exs  2.exs
2020-advent-of-code/3/: 1.exs  2.exs
2020-advent-of-code/4/: 1.exs  2.exs  test.key  test.txt
2020-advent-of-code/5/: 1.exs  2.exs
2020-advent-of-code/6/: 1.exs  1.rs  2.exs
2020-advent-of-code/7/: 1.exs  2.exs
2020-advent-of-code/8/: 1.exs  2.exs
2020-advent-of-code/9/: 1.exs  2.exs  main.go
2021-advent-of-code/: Cargo.toml  README.md  generate.zsh  rust-toolchain.toml
2022-advent-of-code/: Cargo.toml  commit.zsh
2023-advent-of-code/: Cargo.toml  day01.rb  generate.zsh
2024-advent-of-code/: Cargo.toml  commit.zsh
columnar/: main.go
lumen/: Dockerfile  build.sh  k8s.yml  main.go
lumen2/: Cargo.toml  Dockerfile  README.md  fly.toml  wrangler.toml
lumen2/src/: lib.rs  lifx.rs  main.rs  openweathermap.rs  roseParkStationFeedResponse.xml  station_feed.rs
obvs/: README.md  main.go
power-meters/: LOG.md  README.md  dev_queries.sql  queries.sql  rtlamr-pprof.patch
rust/: simd_add.rs
vis/: memory_spaces.html
yeet/: .gitignore  Dockerfile  README.md  build.sh  go.mod  k8s.yml
(+24 files in other folders)
