[package]
name = "lumen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
reqwest = { version = "0.11.13", features = [] }
serde_json = "1.0.89"
cfg-if = "0.1.2"
worker = "0.0.9"
tokio = { version = "1.23.1", features = ["macros"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
anyhow = "1.0.68"
strum_macros = "0.24"
strum = "0.24"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
